# pixeldojo-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pixeldojo/: __init__.py  client.py  config.py  exceptions.py  models.py
pixeldojo/cli/: __init__.py  main.py
pixeldojo/gui/: __init__.py  main.py  mainwindow.py  styles.py  widgets.py  workers.py
pixeldojo/gui/resources/: pixeldojo.desktop
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_exceptions.py  test_models.py
